Adding landing/about page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh"  content="0; url=./dashboard/dashboard_20140220.html" />
+    <meta http-equiv="refresh"  content="0; url=./about/index.html" />
   </head>
 </html>
 
