--- a/dashboard_template.html
+++ b/dashboard_template.html
@@ -94,7 +94,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>W210 MIDS Capstone: David Rose, Wei Shi, Chris Walker</p>
+                    <p class="authors">MIDS Capstone: David Rose, Wei Shi, Chris Walker</p>
                 </div>
             </div>
         </footer>
