Added Wei's Twitter and LinkedIn accounts, made external links spawn new browser tabs

--- a/about/index.html
+++ b/about/index.html
@@ -271,6 +271,8 @@
 								Mark Wei Shi
 								<br/>
 								<a href="mailto:mark.wei.shi@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a>
+								<a href="https://twitter.com/markweishi" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a>
+								<a href="https://cn.linkedin.com/in/mark-shi-34a2496" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a>
 							</li>
 							<li>
 								<img src="images/chris.jpg" border="1px black" height=100>
@@ -278,8 +280,8 @@
 								Chris Walker
 								<br/>
 								<a href="mailto:cw25@mac.com" class="icon fa-envelope-o"><span class="label">Email</span></a>
-								<a href="https://twitter.com/iamchriswalker" class="icon fa-twitter"><span class="label">Email</span></a>
-								<a href="https://www.linkedin.com/in/chris-walker-89674ab" class="icon fa-linkedin"><span class="label">Email</span></a>
+								<a href="https://twitter.com/iamchriswalker" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a>
+								<a href="https://www.linkedin.com/in/chris-walker-89674ab" class="icon fa-linkedin target="_blank""><span class="label">LinkedIn</span></a>
 							</li>
 						</ul>
 						<ul class="copyright">
