added popup to human impact ebola chart 20150101

--- a/detail_view/ebola_20150101.html
+++ b/detail_view/ebola_20150101.html
@@ -197,8 +197,20 @@
                 </div>
               </div>
                 
-                <h3>Human Impact</h3>
-<img class="img-responsive" src="../images/human_impact/ebola_20150101.png" alt="">
+              <h3>Human Impact</h3>
+              
+              <a href="#openimpact" >
+                <img class="img-responsive" src="../images/human_impact/ebola_20150101.png" alt="">
+              </a>
+              <div id="openimpact" class="modalDialog" >
+                <div>
+                  <a href="#close" title="Close" class="close" >X</a>
+                  <img class="img-responsive img-modal" src="../images/human_impact/ebola_20150101.png" alt="">
+                </div>
+              </div>
+              <!--
+              <img class="img-responsive" src="../images/human_impact/ebola_20150101.png" alt="">
+              -->
             </div>
             <div class="col-md-4 portfolio-item">
                 <h3>Article Locations</h3>
